<resources>
    <string name="app_name">DailyReader</string>
    <string name="nav_header_text">他山之石，可以攻玉</string>
    <string name="nav_setting">设置</string>
    <string name="nav_about">关于</string>
    <string name="nav_collection">收藏</string>
    <string name="about_text">剑还没准备好，出门就是江湖</string>
    <string name="about_title">我的信息</string>
    <string name="about_profession">所在职业</string>
    <string name="about_profession_detial">软件工程</string>
    <string name="about_school">所在学校</string>
    <string name="about_school_detial">长沙理工大学</string>
    <string name="about_github">GitHub关注我</string>
    <string name="about_github_detial">https://github.com/echoRookie</string>
    <string name="about_name">个人昵称</string>
    <string name="about_name_detial">Rookie</string>
    <string name="meizi_detail_text">收藏</string>
    <string name="meizi_detail_text_select">已收藏</string>
    <string name="collection_title">我的收藏</string>
    <string name="setting_cate_one">设置</string>
    <string name="setting_cate_two">关于</string>
    <string name="setting_cate_three">作者</string>
    <string name="setting_notification">开启消息通知</string>
    <string name="setting_theme">夜间模式</string>
    <string name="title_one">当前版本号</string>
    <string name="summary_one">V1.0.0</string>
    <string name="title_two">项目地址</string>
    <string name="summary_two">https://github.com/echoRookie/DailyReader</string>
    <string name="title_three">在知乎关注我</string>
    <string name="summary_three">这个杀手不太冷i</string>
    <string name="title_four">在Github关注我</string>
    <string name="summary_four">https://github.com/echoRookie</string>
    <string name="nav_newspaper">日报订阅</string>
    <string name="popupwindow_mypaper">我的日报</string>
    <string name="mypaper_notification">点击删除日报</string>
    <string name="popupwindow_edit">编辑</string>
    <string name="popupwindow_paper">日报推荐</string>
    <string name="popupwindow_note">点击添加日报</string>
</resources>
