<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/setting_cate_one">
        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/setting_notification"
            android:key="switch_notification" />
        <SwitchPreference
        android:defaultValue="false"
        android:title="@string/setting_theme"
        android:key="isNight" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/setting_cate_two">
      <PreferenceScreen
          android:title="@string/title_one"
          android:summary="@string/summary_one">

      </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/title_two"
            android:summary="@string/summary_two">

        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/setting_cate_three">
        <PreferenceScreen
            android:title="@string/title_three"
            android:summary="@string/summary_three">

        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/title_four"
            android:summary="@string/summary_four">

        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>