<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/nav_menu_setting"
            android:id="@+id/nav_setting"
            android:title="@string/nav_setting"/>
        <item
            android:icon="@drawable/nav_menu_collection"
            android:id="@+id/nav_collection"
            android:title="@string/nav_collection" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/nav_menu_about"
            android:id="@+id/nav_about"
            android:title="@string/nav_about"/>
        <item
            android:icon="@drawable/nav_menu_newspaper"
            android:id="@+id/nav_newspaper"
            android:title="@string/nav_newspaper"/>
    </group>
</menu>