<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/about_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:title="@string/about_title"></android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/about_header"
                android:layout_width="match_parent"
                android:layout_height="240dp">

                <ImageView
                    android:scaleType="centerInside"
                    android:id="@+id/about_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/about_image" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/about_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/nav_header_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:text="@string/about_text"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_header"
                android:orientation="vertical">

                <LinearLayout
                    android:background="@color/about_view"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/about_profession" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:scaleType="centerCrop"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/profession" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:text="@string/about_profession_detial" />
                    </LinearLayout>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                     />
                <LinearLayout
                    android:background="@color/about_view"

                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/about_school" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:scaleType="centerCrop"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/school" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:text="@string/about_school_detial" />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />
                <LinearLayout
                    android:background="@color/about_view"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/about_name" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:scaleType="centerCrop"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/about_name" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:text="@string/about_name_detial" />
                    </LinearLayout>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />
                <LinearLayout
                    android:background="@color/about_view"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/about_github" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:scaleType="centerCrop"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/github" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:text="@string/about_github_detial" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>